1807 omstrukturerer og sorterer respons for åpne behandlinger
